refactor for supporting both res and asset image texture set

--- a/Sources/AndroidStudioProjects/Abc/app/src/main/res/values/styles.xml
+++ b/Sources/AndroidStudioProjects/Abc/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- Base application raw.theme. -->
   <!--  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        &lt;!&ndash; Customize your theme here. &ndash;&gt;
+        &lt;!&ndash; Customize your raw.theme here. &ndash;&gt;
     </style>-->
 
 </resources>
